2009-10-11  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#134370 - Icon is not shown for the newly added image in the
	'choose background dialog'.

	* src/hd-change-background-dialog.c
	  (hd_change_background_dialog_append_backgrounds,
	  request_thumbnail_for_uri, hd_change_background_dialog_constructed,
	  add_image_dialog_response): Add support for thumbnail for newly
	  added image.

2009-10-09  Jan Arne Petersen  <jpetersen@openismus.com>

	Release 0.3.50
	* configure.ac: 0.3.50

2009-10-09  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#130557 - LED continusly blinks though clear the
	notifications from task switcher

	* src/hd-incoming-events.c
	  (_HDIncomingEventsPrivate::task_switcher_shown,
	  hd_incoming_events_notified,
	  hd_incoming_events_system_bus_signal_handler,
	  filter_property_changed): Do not blink when task switcher is shown
	  and display is on.

	* src/home.safe-set.in: Update.

2009-10-09  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 0.3.49
	* configure.ac: 0.3.49

2009-10-08  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#130557 - LED continusly blinks though clear the
	notifications from task switcher

	* src/hd-incoming-events.c (filter_property_changed): Deactivate all
	notification related led patterns when task switcher is shown to fix
	broken behaviour when hildon-home crashed.

	* src/hd-led-pattern.c (hd_led_pattern_deactivate_all):
	* src/hd-led-pattern.h: Add function to deactivate all notification
	related led patterns.

	* debian/changelog: Update.

2009-10-08  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#134569 - Very rarely 'SMS Conversation View' is not opened
	immediately from notification preview if it stays in Task Switcher
	View for a while
	Fixes: NB#126688 - Contact authorization dialog should not be modal

	* src/hd-incoming-events.c (notifications_append,
	  is_notification_sticky, repack_ptr_array, notifications_close_all,