@@ -1,3 +1,11 @@
+2009-10-12  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	Fixes: NB#138509 - Preview notification text has white drop shadow
+
+	* src/hd-incoming-event-window.c
+	(hd_incoming_event_window_class_init): Remove shadows from rc parse
+	string.
+
 2009-10-11  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	Fixes: NB#134370 - Icon is not shown for the newly added image in the
